commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.filterpivothierarchycollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.filterpivothierarchycollectionloadoptions.yml
@@ -1,91 +1,98 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions:interface'
-    summary: |-
-      代表与数据透视表相关联的 FilterPivotHierarchy 项目的集合。
+### YamlMime:TSType
+name: Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions
+uid: excel!Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions
+summary: >-
+  代表与数据透视表相关联的 FilterPivotHierarchy 项目的集合。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions
-    fullName: Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions#enableMultipleFilterItems:member'
-      - 'excel!Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions#id:member'
-      - 'excel!Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions#name:member'
-      - 'excel!Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions#position:member'
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions#enableMultipleFilterItems:member'
-    summary: |-
-      对于集合中的每个项目：确定是否允许多个筛选器项目。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: enableMultipleFilterItems
-    fullName: enableMultipleFilterItems
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'enableMultipleFilterItems?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions#id:member'
-    summary: |-
-      对于集合中的每一项： FilterPivotHierarchy 的 Id。
+  \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: enableMultipleFilterItems
+  uid: excel!Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions#enableMultipleFilterItems:member
+  package: excel!
+  fullName: enableMultipleFilterItems
+  summary: >-
+    对于集合中的每个项目：确定是否允许多个筛选器项目。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions#name:member'
-    summary: |-
-      对于集合中的每一项： FilterPivotHierarchy 的名称。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions#position:member'
-    summary: |-
-      对于集合中的每一项： FilterPivotHierarchy 的位置。
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'enableMultipleFilterItems?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: excel!Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions#id:member
+  package: excel!
+  fullName: id
+  summary: >-
+    对于集合中的每一项： FilterPivotHierarchy 的 Id。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: position
-    fullName: position
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'position?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: name
+  uid: excel!Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    对于集合中的每一项： FilterPivotHierarchy 的名称。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: boolean;'
+    return:
+      type: boolean
+- name: position
+  uid: excel!Excel.Interfaces.FilterPivotHierarchyCollectionLoadOptions#position:member
+  package: excel!
+  fullName: position
+  summary: >-
+    对于集合中的每一项： FilterPivotHierarchy 的位置。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'position?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: fb5321f1c1c21f87e3c0906f5de569dccb19e283
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49299539"
