--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.geometricshapeloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.geometricshapeloadoptions.yml
@@ -1,62 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.GeometricShapeLoadOptions:interface'
-    summary: |-
-      代表工作表中的几何形状。 在 Excel 中，几何形状可以是矩形、箭头总汇、公式符号、流程图项、星形、横幅、标注或任何其他基本形状。
+### YamlMime:TSType
+name: Excel.Interfaces.GeometricShapeLoadOptions
+uid: excel!Excel.Interfaces.GeometricShapeLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.GeometricShapeLoadOptions
+summary: >-
+  代表工作表中的几何形状。 在 Excel 中，几何形状可以是矩形、箭头总汇、公式符号、流程图项、星形、横幅、标注或任何其他基本形状。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.GeometricShapeLoadOptions
-    fullName: Excel.Interfaces.GeometricShapeLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.GeometricShapeLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.GeometricShapeLoadOptions#id:member'
-      - 'excel!Excel.Interfaces.GeometricShapeLoadOptions#shape:member'
-  - uid: 'excel!Excel.Interfaces.GeometricShapeLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.GeometricShapeLoadOptions#id:member'
-    summary: |-
-      返回形状标识符。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.GeometricShapeLoadOptions#shape:member'
-    summary: |-
-      返回几何形状的形状对象。
+  \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.GeometricShapeLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: excel!Excel.Interfaces.GeometricShapeLoadOptions#id:member
+  package: excel!
+  fullName: id
+  summary: >-
+    返回形状标识符。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: shape
-    fullName: shape
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'shape?: Excel.Interfaces.ShapeLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ShapeLoadOptions:interface'
-references:
-  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions:interface'
-    name: Excel.Interfaces.ShapeLoadOptions
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: shape
+  uid: excel!Excel.Interfaces.GeometricShapeLoadOptions#shape:member
+  package: excel!
+  fullName: shape
+  summary: >-
+    返回几何形状的形状对象。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'shape?: Excel.Interfaces.ShapeLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ShapeLoadOptions:interface" />
+metadata:
+  ms.openlocfilehash: 69b3b15c43e3e7ca982d53e4622f2371bcec58b8
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49299245"
