--- a/docs/docs-ref-autogen/excel_online/excel/excel.sortby.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.sortby.yml
@@ -1,32 +1,29 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.SortBy:enum'
-    summary: |-
-      表示排序方向。
+### YamlMime:TSEnum
+name: Excel.SortBy
+uid: excel!Excel.SortBy:enum
+package: excel!
+fullName: Excel.SortBy
+summary: >-
+  表示排序方向。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.SortBy
-    fullName: Excel.SortBy
-    langs:
-      - typeScript
-    type: enum
-    package: excel!
-    children:
-      - 'excel!Excel.SortBy.ascending:member'
-      - 'excel!Excel.SortBy.descending:member'
-  - uid: 'excel!Excel.SortBy.ascending:member'
-    summary: 升序排序。 最小到最大或从 A 到 Z。
-    name: ascending
-    fullName: ascending
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Ascending"'
-  - uid: 'excel!Excel.SortBy.descending:member'
-    summary: 降序排序。 从大到小或 Z 到 A。
-    name: descending
-    fullName: descending
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Descending"'
+
+  \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: ascending
+  uid: excel!Excel.SortBy.ascending:member
+  package: excel!
+  summary: 升序排序。 最小到最大或从 A 到 Z。
+- name: descending
+  uid: excel!Excel.SortBy.descending:member
+  package: excel!
+  summary: 降序排序。 从大到小或 Z 到 A。
+metadata:
+  ms.openlocfilehash: 5cb4ec6b5499b816765136413cc1299d6d32044d
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49301212"
