--- a/docs/docs-ref-autogen/outlook/outlook/office.appointmenttimechangedeventargs.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.appointmenttimechangedeventargs.yml
@@ -1,65 +1,70 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.AppointmentTimeChangedEventArgs:interface'
-    summary: |-
-      提供引发事件的约会的当前日期和时间 `Office.EventType.AppointmentTimeChanged` 。
+### YamlMime:TSType
+name: Office.AppointmentTimeChangedEventArgs
+uid: outlook!Office.AppointmentTimeChangedEventArgs:interface
+package: outlook!
+fullName: Office.AppointmentTimeChangedEventArgs
+summary: >-
+  提供引发事件的约会的当前日期和时间 `Office.EventType.AppointmentTimeChanged` 。
 
-      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    name: Office.AppointmentTimeChangedEventArgs
-    fullName: Office.AppointmentTimeChangedEventArgs
-    langs:
-      - typeScript
-    type: interface
-    package: outlook!
-    children:
-      - 'outlook!Office.AppointmentTimeChangedEventArgs#end:member'
-      - 'outlook!Office.AppointmentTimeChangedEventArgs#start:member'
-      - 'outlook!Office.AppointmentTimeChangedEventArgs#type:member'
-  - uid: 'outlook!Office.AppointmentTimeChangedEventArgs#end:member'
-    summary: |-
-      获取约会结束日期和时间。
 
-      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    name: end
-    fullName: end
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'end: Date;'
-      return:
-        type:
-          - '!Date:interface'
-  - uid: 'outlook!Office.AppointmentTimeChangedEventArgs#start:member'
-    summary: |-
-      获取约会的开始日期和时间。
+  \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: end
+  uid: outlook!Office.AppointmentTimeChangedEventArgs#end:member
+  package: outlook!
+  fullName: end
+  summary: >-
+    获取约会结束日期和时间。
 
-      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    name: start
-    fullName: start
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'start: Date;'
-      return:
-        type:
-          - '!Date:interface'
-  - uid: 'outlook!Office.AppointmentTimeChangedEventArgs#type:member'
-    summary: |-
-      获取事件的类型。 有关详细信息，请参阅 `Office.EventType`。
 
-      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type: "olkAppointmentTimeChanged";'
-      return:
-        type:
-          - '"olkAppointmentTimeChanged"'
-references:
-  - uid: '!Date:interface'
-    name: Date
+    \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'end: Date;'
+    return:
+      type: Date
+- name: start
+  uid: outlook!Office.AppointmentTimeChangedEventArgs#start:member
+  package: outlook!
+  fullName: start
+  summary: >-
+    获取约会的开始日期和时间。
+
+
+    \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'start: Date;'
+    return:
+      type: Date
+- name: type
+  uid: outlook!Office.AppointmentTimeChangedEventArgs#type:member
+  package: outlook!
+  fullName: type
+  summary: >-
+    获取事件的类型。 有关详细信息，请参阅 `Office.EventType`。
+
+
+    \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'type: "olkAppointmentTimeChanged";'
+    return:
+      type: "\"olkAppointmentTimeChanged\""
+metadata:
+  ms.openlocfilehash: fe0a7a7228c66a7e2773c3a4979d627f73a5f0fe
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49301044"
