--- a/docs/docs-ref-autogen/outlook/outlook/office.mailboxenums.locationtype.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.mailboxenums.locationtype.yml
@@ -1,33 +1,29 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.MailboxEnums.LocationType:enum'
-    summary: |-
-      指定约会位置的类型。
+### YamlMime:TSEnum
+name: Office.MailboxEnums.LocationType
+uid: outlook!Office.MailboxEnums.LocationType:enum
+package: outlook!
+fullName: Office.MailboxEnums.LocationType
+summary: >-
+  指定约会位置的类型。
 
-      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    remarks: '**[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读'
-    name: Office.MailboxEnums.LocationType
-    fullName: Office.MailboxEnums.LocationType
-    langs:
-      - typeScript
-    type: enum
-    package: outlook!
-    children:
-      - 'outlook!Office.MailboxEnums.LocationType.Custom:member'
-      - 'outlook!Office.MailboxEnums.LocationType.Room:member'
-  - uid: 'outlook!Office.MailboxEnums.LocationType.Custom:member'
-    summary: 自定义位置。
-    name: Custom
-    fullName: Custom
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"custom"'
-  - uid: 'outlook!Office.MailboxEnums.LocationType.Room:member'
-    summary: 会议室或类似资源。
-    name: Room
-    fullName: Room
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"room"'
+
+  \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+remarks: '**[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写或阅读'
+isPreview: false
+isDeprecated: false
+fields:
+- name: Custom
+  uid: outlook!Office.MailboxEnums.LocationType.Custom:member
+  package: outlook!
+  summary: 自定义位置。
+- name: Room
+  uid: outlook!Office.MailboxEnums.LocationType.Room:member
+  package: outlook!
+  summary: 会议室或类似资源。
+metadata:
+  ms.openlocfilehash: 7e1ec43847785f68eb34047084afa9583022bc8f
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49300897"
