--- a/docs/docs-ref-autogen/outlook/outlook/office.mailboxenums.month.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.mailboxenums.month.yml
@@ -1,123 +1,69 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.MailboxEnums.Month:enum'
-    summary: |-
-      指定月。
+### YamlMime:TSEnum
+name: Office.MailboxEnums.Month
+uid: outlook!Office.MailboxEnums.Month:enum
+package: outlook!
+fullName: Office.MailboxEnums.Month
+summary: >-
+  指定月。
 
-      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    remarks: '**[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读'
-    name: Office.MailboxEnums.Month
-    fullName: Office.MailboxEnums.Month
-    langs:
-      - typeScript
-    type: enum
-    package: outlook!
-    children:
-      - 'outlook!Office.MailboxEnums.Month.Apr:member'
-      - 'outlook!Office.MailboxEnums.Month.Aug:member'
-      - 'outlook!Office.MailboxEnums.Month.Dec:member'
-      - 'outlook!Office.MailboxEnums.Month.Feb:member'
-      - 'outlook!Office.MailboxEnums.Month.Jan:member'
-      - 'outlook!Office.MailboxEnums.Month.Jul:member'
-      - 'outlook!Office.MailboxEnums.Month.Jun:member'
-      - 'outlook!Office.MailboxEnums.Month.Mar:member'
-      - 'outlook!Office.MailboxEnums.Month.May:member'
-      - 'outlook!Office.MailboxEnums.Month.Nov:member'
-      - 'outlook!Office.MailboxEnums.Month.Oct:member'
-      - 'outlook!Office.MailboxEnums.Month.Sep:member'
-  - uid: 'outlook!Office.MailboxEnums.Month.Apr:member'
-    summary: 年4月
-    name: Apr
-    fullName: Apr
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"apr"'
-  - uid: 'outlook!Office.MailboxEnums.Month.Aug:member'
-    summary: 年8月
-    name: Aug
-    fullName: Aug
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"aug"'
-  - uid: 'outlook!Office.MailboxEnums.Month.Dec:member'
-    summary: '12'
-    name: Dec
-    fullName: Dec
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"dec"'
-  - uid: 'outlook!Office.MailboxEnums.Month.Feb:member'
-    summary: '2'
-    name: Feb
-    fullName: Feb
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"feb"'
-  - uid: 'outlook!Office.MailboxEnums.Month.Jan:member'
-    summary: 年1月
-    name: Jan
-    fullName: Jan
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"jan"'
-  - uid: 'outlook!Office.MailboxEnums.Month.Jul:member'
-    summary: 年7月
-    name: Jul
-    fullName: Jul
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"jul"'
-  - uid: 'outlook!Office.MailboxEnums.Month.Jun:member'
-    summary: '7'
-    name: Jun
-    fullName: Jun
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"jun"'
-  - uid: 'outlook!Office.MailboxEnums.Month.Mar:member'
-    summary: '31'
-    name: Mar
-    fullName: Mar
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"mar"'
-  - uid: 'outlook!Office.MailboxEnums.Month.May:member'
-    summary: 有时
-    name: May
-    fullName: May
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"may"'
-  - uid: 'outlook!Office.MailboxEnums.Month.Nov:member'
-    summary: '2007'
-    name: Nov
-    fullName: Nov
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"nov"'
-  - uid: 'outlook!Office.MailboxEnums.Month.Oct:member'
-    summary: 年
-    name: Oct
-    fullName: Oct
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"oct"'
-  - uid: 'outlook!Office.MailboxEnums.Month.Sep:member'
-    summary: 月份
-    name: Sep
-    fullName: Sep
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"sep"'
+
+  \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+remarks: '**[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写或阅读'
+isPreview: false
+isDeprecated: false
+fields:
+- name: Apr
+  uid: outlook!Office.MailboxEnums.Month.Apr:member
+  package: outlook!
+  summary: 年4月
+- name: Aug
+  uid: outlook!Office.MailboxEnums.Month.Aug:member
+  package: outlook!
+  summary: 年8月
+- name: Dec
+  uid: outlook!Office.MailboxEnums.Month.Dec:member
+  package: outlook!
+  summary: "12"
+- name: Feb
+  uid: outlook!Office.MailboxEnums.Month.Feb:member
+  package: outlook!
+  summary: "2"
+- name: Jan
+  uid: outlook!Office.MailboxEnums.Month.Jan:member
+  package: outlook!
+  summary: 年1月
+- name: Jul
+  uid: outlook!Office.MailboxEnums.Month.Jul:member
+  package: outlook!
+  summary: 年7月
+- name: Jun
+  uid: outlook!Office.MailboxEnums.Month.Jun:member
+  package: outlook!
+  summary: "7"
+- name: Mar
+  uid: outlook!Office.MailboxEnums.Month.Mar:member
+  package: outlook!
+  summary: "31"
+- name: May
+  uid: outlook!Office.MailboxEnums.Month.May:member
+  package: outlook!
+  summary: 有时
+- name: Nov
+  uid: outlook!Office.MailboxEnums.Month.Nov:member
+  package: outlook!
+  summary: "2007"
+- name: Oct
+  uid: outlook!Office.MailboxEnums.Month.Oct:member
+  package: outlook!
+  summary: 年
+- name: Sep
+  uid: outlook!Office.MailboxEnums.Month.Sep:member
+  package: outlook!
+  summary: 九月
+metadata:
+  ms.openlocfilehash: 4e6c899736fe0d3132f7db0d4e4db5f6ba28af22
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49300869"
