--- a/docs/docs-ref-autogen/outlook/outlook/office.notificationmessageaction.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.notificationmessageaction.yml
@@ -1,85 +1,74 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.NotificationMessageAction:interface'
-    summary: |-
-      通知邮件的操作定义。
+### YamlMime:TSType
+name: Office.NotificationMessageAction
+uid: outlook!Office.NotificationMessageAction:interface
+package: outlook!
+fullName: Office.NotificationMessageAction
+summary: >-
+  通知邮件的操作定义。
 
-      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写
-    isPreview: true
-    name: Office.NotificationMessageAction
-    fullName: Office.NotificationMessageAction
-    langs:
-      - typeScript
-    type: interface
-    package: outlook!
-    children:
-      - 'outlook!Office.NotificationMessageAction#actionText:member'
-      - 'outlook!Office.NotificationMessageAction#actionType:member'
-      - 'outlook!Office.NotificationMessageAction#commandId:member'
-      - 'outlook!Office.NotificationMessageAction#contextData:member'
-  - uid: 'outlook!Office.NotificationMessageAction#actionText:member'
-    summary: 操作链接的文本。
-    isPreview: true
-    name: actionText
-    fullName: actionText
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'actionText: string;'
-      return:
-        type:
-          - string
-  - uid: 'outlook!Office.NotificationMessageAction#actionType:member'
-    summary: 要执行的操作的类型。 `ActionType.ShowTaskPane`是唯一受支持的操作。
-    isPreview: true
-    name: actionType
-    fullName: actionType
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'actionType: string | MailboxEnums.ActionType;'
-      return:
-        type:
-          - 'outlook!Office.NotificationMessageAction#actionType~0:complex'
-  - uid: 'outlook!Office.NotificationMessageAction#commandId:member'
-    summary: 基于项目类型在清单中定义的按钮。
-    isPreview: true
-    name: commandId
-    fullName: commandId
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'commandId: string;'
-      return:
-        type:
-          - string
-  - uid: 'outlook!Office.NotificationMessageAction#contextData:member'
-    summary: 按钮需要传递的任何 JSON 数据。
-    isPreview: true
-    name: contextData
-    fullName: contextData
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'contextData: any;'
-      return:
-        type:
-          - any
-references:
-  - uid: 'outlook!Office.NotificationMessageAction#actionType~0:complex'
-    name: string | MailboxEnums.ActionType
-    fullName: string | Office.MailboxEnums.ActionType
-    spec.typeScript:
-      - name: 'string | '
-        fullName: 'string | '
-      - uid: 'outlook!Office.MailboxEnums.ActionType:enum'
-        name: MailboxEnums.ActionType
-        fullName: Office.MailboxEnums.ActionType
+  \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+remarks: >-
+  **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
+
+
+  **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写
+isPreview: true
+isDeprecated: false
+type: interface
+properties:
+- name: actionText
+  uid: outlook!Office.NotificationMessageAction#actionText:member
+  package: outlook!
+  fullName: actionText
+  summary: 操作链接的文本。
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'actionText: string;'
+    return:
+      type: string
+- name: actionType
+  uid: outlook!Office.NotificationMessageAction#actionType:member
+  package: outlook!
+  fullName: actionType
+  summary: 要执行的操作的类型。 `ActionType.ShowTaskPane` 是唯一受支持的操作。
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'actionType: string | MailboxEnums.ActionType;'
+    return:
+      type: string | <xref uid="outlook!Office.MailboxEnums.ActionType:enum" />
+- name: commandId
+  uid: outlook!Office.NotificationMessageAction#commandId:member
+  package: outlook!
+  fullName: commandId
+  summary: 基于项目类型在清单中定义的按钮。
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'commandId: string;'
+    return:
+      type: string
+- name: contextData
+  uid: outlook!Office.NotificationMessageAction#contextData:member
+  package: outlook!
+  fullName: contextData
+  summary: 按钮需要传递的任何 JSON 数据。
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'contextData: any;'
+    return:
+      type: any
+metadata:
+  ms.openlocfilehash: 636656eedc2a1d7c3c3d7848838562805dcb0a4f
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49300827"
