--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.documentpropertiesupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.documentpropertiesupdatedata.yml
@@ -1,155 +1,162 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData:interface'
-    summary: '一个用于更新 DocumentProperties 对象上的数据的接口，可用于`documentProperties.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.DocumentPropertiesUpdateData
-    fullName: Excel.Interfaces.DocumentPropertiesUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#author:member'
-      - 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#category:member'
-      - 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#comments:member'
-      - 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#company:member'
-      - 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#keywords:member'
-      - 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#manager:member'
-      - 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#revisionNumber:member'
-      - 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#subject:member'
-      - 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#title:member'
-  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#author:member'
-    summary: |-
-      工作簿的作者。
+### YamlMime:TSType
+name: Excel.Interfaces.DocumentPropertiesUpdateData
+uid: excel!Excel.Interfaces.DocumentPropertiesUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.DocumentPropertiesUpdateData
+summary: 一个用于更新 DocumentProperties 对象上的数据的接口，可用于 `documentProperties.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: author
+  uid: excel!Excel.Interfaces.DocumentPropertiesUpdateData#author:member
+  package: excel!
+  fullName: author
+  summary: >-
+    工作簿的作者。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: author
-    fullName: author
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'author?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#category:member'
-    summary: |-
-      工作簿的类别。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: category
-    fullName: category
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'category?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#comments:member'
-    summary: |-
-      工作簿的注释。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'author?: string;'
+    return:
+      type: string
+- name: category
+  uid: excel!Excel.Interfaces.DocumentPropertiesUpdateData#category:member
+  package: excel!
+  fullName: category
+  summary: >-
+    工作簿的类别。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: comments
-    fullName: comments
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'comments?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#company:member'
-    summary: |-
-      工作簿的公司。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: company
-    fullName: company
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'company?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#keywords:member'
-    summary: |-
-      工作簿的关键字。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'category?: string;'
+    return:
+      type: string
+- name: comments
+  uid: excel!Excel.Interfaces.DocumentPropertiesUpdateData#comments:member
+  package: excel!
+  fullName: comments
+  summary: >-
+    工作簿的注释。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: keywords
-    fullName: keywords
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'keywords?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#manager:member'
-    summary: |-
-      工作簿的管理者。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: manager
-    fullName: manager
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'manager?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#revisionNumber:member'
-    summary: |-
-      获取工作簿的修订号。 只读。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'comments?: string;'
+    return:
+      type: string
+- name: company
+  uid: excel!Excel.Interfaces.DocumentPropertiesUpdateData#company:member
+  package: excel!
+  fullName: company
+  summary: >-
+    工作簿的公司。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: revisionNumber
-    fullName: revisionNumber
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'revisionNumber?: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#subject:member'
-    summary: |-
-      工作簿的主题。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: subject
-    fullName: subject
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'subject?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData#title:member'
-    summary: |-
-      工作簿的标题。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'company?: string;'
+    return:
+      type: string
+- name: keywords
+  uid: excel!Excel.Interfaces.DocumentPropertiesUpdateData#keywords:member
+  package: excel!
+  fullName: keywords
+  summary: >-
+    工作簿的关键字。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: title
-    fullName: title
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'title?: string;'
-      return:
-        type:
-          - string
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'keywords?: string;'
+    return:
+      type: string
+- name: manager
+  uid: excel!Excel.Interfaces.DocumentPropertiesUpdateData#manager:member
+  package: excel!
+  fullName: manager
+  summary: >-
+    工作簿的管理者。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'manager?: string;'
+    return:
+      type: string
+- name: revisionNumber
+  uid: excel!Excel.Interfaces.DocumentPropertiesUpdateData#revisionNumber:member
+  package: excel!
+  fullName: revisionNumber
+  summary: >-
+    获取工作簿的修订号。 只读。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'revisionNumber?: number;'
+    return:
+      type: number
+- name: subject
+  uid: excel!Excel.Interfaces.DocumentPropertiesUpdateData#subject:member
+  package: excel!
+  fullName: subject
+  summary: >-
+    工作簿的主题。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'subject?: string;'
+    return:
+      type: string
+- name: title
+  uid: excel!Excel.Interfaces.DocumentPropertiesUpdateData#title:member
+  package: excel!
+  fullName: title
+  summary: >-
+    工作簿的标题。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'title?: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: 01916a62d22c8235c3fa6054b2c31b87b967e5f3
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49299623"
