--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.filterpivothierarchydata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.filterpivothierarchydata.yml
@@ -1,101 +1,98 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyData:interface'
-    summary: 描述通过调用返回的数据的接口`filterPivotHierarchy.toJSON()`<!-- -->.
-    name: Excel.Interfaces.FilterPivotHierarchyData
-    fullName: Excel.Interfaces.FilterPivotHierarchyData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.FilterPivotHierarchyData#enableMultipleFilterItems:member'
-      - 'excel!Excel.Interfaces.FilterPivotHierarchyData#fields:member'
-      - 'excel!Excel.Interfaces.FilterPivotHierarchyData#id:member'
-      - 'excel!Excel.Interfaces.FilterPivotHierarchyData#name:member'
-      - 'excel!Excel.Interfaces.FilterPivotHierarchyData#position:member'
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyData#enableMultipleFilterItems:member'
-    summary: |-
-      确定是否允许多个筛选项。
+### YamlMime:TSType
+name: Excel.Interfaces.FilterPivotHierarchyData
+uid: excel!Excel.Interfaces.FilterPivotHierarchyData:interface
+package: excel!
+fullName: Excel.Interfaces.FilterPivotHierarchyData
+summary: 描述通过调用返回的数据的接口 `filterPivotHierarchy.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: enableMultipleFilterItems
+  uid: excel!Excel.Interfaces.FilterPivotHierarchyData#enableMultipleFilterItems:member
+  package: excel!
+  fullName: enableMultipleFilterItems
+  summary: >-
+    确定是否允许多个筛选项。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: enableMultipleFilterItems
-    fullName: enableMultipleFilterItems
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'enableMultipleFilterItems?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyData#fields:member'
-    summary: |-
-      返回与 FilterPivotHierarchy 相关联的 PivotFields。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: fields
-    fullName: fields
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'fields?: Excel.Interfaces.PivotFieldData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.FilterPivotHierarchyData#fields~0:complex'
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyData#id:member'
-    summary: |-
-      FilterPivotHierarchy 的 ID。
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'enableMultipleFilterItems?: boolean;'
+    return:
+      type: boolean
+- name: fields
+  uid: excel!Excel.Interfaces.FilterPivotHierarchyData#fields:member
+  package: excel!
+  fullName: fields
+  summary: >-
+    返回与 FilterPivotHierarchy 相关联的 PivotFields。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyData#name:member'
-    summary: |-
-      FilterPivotHierarchy 的名称。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyData#position:member'
-    summary: |-
-      FilterPivotHierarchy 的位置。
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'fields?: Excel.Interfaces.PivotFieldData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.PivotFieldData:interface" />[]
+- name: id
+  uid: excel!Excel.Interfaces.FilterPivotHierarchyData#id:member
+  package: excel!
+  fullName: id
+  summary: >-
+    FilterPivotHierarchy 的 ID。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: position
-    fullName: position
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'position?: number;'
-      return:
-        type:
-          - number
-references:
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyData#fields~0:complex'
-    name: 'Excel.Interfaces.PivotFieldData[]'
-    fullName: 'Excel.Interfaces.PivotFieldData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.PivotFieldData:interface'
-        name: Excel.Interfaces.PivotFieldData
-        fullName: Excel.Interfaces.PivotFieldData
-      - name: '[]'
-        fullName: '[]'
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: string;'
+    return:
+      type: string
+- name: name
+  uid: excel!Excel.Interfaces.FilterPivotHierarchyData#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    FilterPivotHierarchy 的名称。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: string;'
+    return:
+      type: string
+- name: position
+  uid: excel!Excel.Interfaces.FilterPivotHierarchyData#position:member
+  package: excel!
+  fullName: position
+  summary: >-
+    FilterPivotHierarchy 的位置。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'position?: number;'
+    return:
+      type: number
+metadata:
+  ms.openlocfilehash: e1e912d937f78373dc82c57aa25ac2eba763b7a9
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49299490"
