--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.filterpivothierarchyloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.filterpivothierarchyloadoptions.yml
@@ -1,91 +1,98 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyLoadOptions:interface'
-    summary: |-
-      表示 Excel FilterPivotHierarchy。
+### YamlMime:TSType
+name: Excel.Interfaces.FilterPivotHierarchyLoadOptions
+uid: excel!Excel.Interfaces.FilterPivotHierarchyLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.FilterPivotHierarchyLoadOptions
+summary: >-
+  表示 Excel FilterPivotHierarchy。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.FilterPivotHierarchyLoadOptions
-    fullName: Excel.Interfaces.FilterPivotHierarchyLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.FilterPivotHierarchyLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.FilterPivotHierarchyLoadOptions#enableMultipleFilterItems:member'
-      - 'excel!Excel.Interfaces.FilterPivotHierarchyLoadOptions#id:member'
-      - 'excel!Excel.Interfaces.FilterPivotHierarchyLoadOptions#name:member'
-      - 'excel!Excel.Interfaces.FilterPivotHierarchyLoadOptions#position:member'
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyLoadOptions#enableMultipleFilterItems:member'
-    summary: |-
-      确定是否允许多个筛选项。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: enableMultipleFilterItems
-    fullName: enableMultipleFilterItems
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'enableMultipleFilterItems?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyLoadOptions#id:member'
-    summary: |-
-      FilterPivotHierarchy 的 ID。
+  \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.FilterPivotHierarchyLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: enableMultipleFilterItems
+  uid: excel!Excel.Interfaces.FilterPivotHierarchyLoadOptions#enableMultipleFilterItems:member
+  package: excel!
+  fullName: enableMultipleFilterItems
+  summary: >-
+    确定是否允许多个筛选项。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyLoadOptions#name:member'
-    summary: |-
-      FilterPivotHierarchy 的名称。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyLoadOptions#position:member'
-    summary: |-
-      FilterPivotHierarchy 的位置。
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'enableMultipleFilterItems?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: excel!Excel.Interfaces.FilterPivotHierarchyLoadOptions#id:member
+  package: excel!
+  fullName: id
+  summary: >-
+    FilterPivotHierarchy 的 ID。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: position
-    fullName: position
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'position?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: name
+  uid: excel!Excel.Interfaces.FilterPivotHierarchyLoadOptions#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    FilterPivotHierarchy 的名称。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: boolean;'
+    return:
+      type: boolean
+- name: position
+  uid: excel!Excel.Interfaces.FilterPivotHierarchyLoadOptions#position:member
+  package: excel!
+  fullName: position
+  summary: >-
+    FilterPivotHierarchy 的位置。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'position?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: a0c4cd012cd871059ccd24722e00f4cef427083d
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49299399"
