--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.settingdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.settingdata.yml
@@ -1,43 +1,50 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.SettingData:interface'
-    summary: 描述通过调用返回的数据的接口`setting.toJSON()`<!-- -->.
-    name: Excel.Interfaces.SettingData
-    fullName: Excel.Interfaces.SettingData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.SettingData#key:member'
-      - 'excel!Excel.Interfaces.SettingData#value:member'
-  - uid: 'excel!Excel.Interfaces.SettingData#key:member'
-    summary: |-
-      表示设置的 id 的键。
+### YamlMime:TSType
+name: Excel.Interfaces.SettingData
+uid: excel!Excel.Interfaces.SettingData:interface
+package: excel!
+fullName: Excel.Interfaces.SettingData
+summary: 描述通过调用返回的数据的接口 `setting.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: key
+  uid: excel!Excel.Interfaces.SettingData#key:member
+  package: excel!
+  fullName: key
+  summary: >-
+    表示设置的 id 的键。
 
-      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: key
-    fullName: key
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'key?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.SettingData#value:member'
-    summary: |-
-      表示为此设置存储的值。
 
-      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: value
-    fullName: value
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'value?: any;'
-      return:
-        type:
-          - any
+    \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'key?: string;'
+    return:
+      type: string
+- name: value
+  uid: excel!Excel.Interfaces.SettingData#value:member
+  package: excel!
+  fullName: value
+  summary: >-
+    表示为此设置存储的值。
+
+
+    \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'value?: any;'
+    return:
+      type: any
+metadata:
+  ms.openlocfilehash: 5f1b35d54d723650fb3752a0d4ad8ac59f9ffedc
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49302731"
