--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.rowcolumnpivothierarchycollection.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.rowcolumnpivothierarchycollection.yml
@@ -1,263 +1,213 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.RowColumnPivotHierarchyCollection:class'
-    summary: |-
-      代表与数据透视表相关联的 RowColumnPivotHierarchy 项目的集合。
+### YamlMime:TSType
+name: Excel.RowColumnPivotHierarchyCollection
+uid: excel!Excel.RowColumnPivotHierarchyCollection:class
+package: excel!
+fullName: Excel.RowColumnPivotHierarchyCollection
+summary: >-
+  代表与数据透视表相关联的 RowColumnPivotHierarchy 项目的集合。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.RowColumnPivotHierarchyCollection
-    fullName: Excel.RowColumnPivotHierarchyCollection
-    langs:
-      - typeScript
-    type: class
-    extends:
-      - 'office!OfficeExtension.ClientObject:class'
-    package: excel!
-    children:
-      - 'excel!Excel.RowColumnPivotHierarchyCollection#add:member(1)'
-      - 'excel!Excel.RowColumnPivotHierarchyCollection#context:member'
-      - 'excel!Excel.RowColumnPivotHierarchyCollection#getCount:member(1)'
-      - 'excel!Excel.RowColumnPivotHierarchyCollection#getItem:member(1)'
-      - 'excel!Excel.RowColumnPivotHierarchyCollection#getItemOrNullObject:member(1)'
-      - 'excel!Excel.RowColumnPivotHierarchyCollection#items:member'
-      - 'excel!Excel.RowColumnPivotHierarchyCollection#load:member(1)'
-      - 'excel!Excel.RowColumnPivotHierarchyCollection#load:member(2)'
-      - 'excel!Excel.RowColumnPivotHierarchyCollection#load:member(3)'
-      - 'excel!Excel.RowColumnPivotHierarchyCollection#remove:member(1)'
-      - 'excel!Excel.RowColumnPivotHierarchyCollection#toJSON:member(1)'
-  - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#add:member(1)'
-    summary: |-
-      将 PivotHierarchy 添加到当前轴。 如果行、列或筛选轴上的其他位置存在层次结构，则会将该层次结构从相应的位置移除。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: add(pivotHierarchy)
-    fullName: add(pivotHierarchy)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'add(pivotHierarchy: Excel.PivotHierarchy): Excel.RowColumnPivotHierarchy;'
-      return:
-        type:
-          - 'excel!Excel.RowColumnPivotHierarchy:class'
-        description: ''
-      parameters:
-        - id: pivotHierarchy
-          description: ''
-          type:
-            - 'excel!Excel.PivotHierarchy:class'
-  - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#context:member'
-    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    name: context
-    fullName: context
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'context: RequestContext;'
-      return:
-        type:
-          - 'excel!Excel.RequestContext:class'
-  - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#getCount:member(1)'
-    summary: |-
-      获取集合中的透视层级结构的数量。
+  \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+properties:
+- name: context
+  uid: excel!Excel.RowColumnPivotHierarchyCollection#context:member
+  package: excel!
+  fullName: context
+  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'context: RequestContext;'
+    return:
+      type: <xref uid="excel!Excel.RequestContext:class" />
+- name: items
+  uid: excel!Excel.RowColumnPivotHierarchyCollection#items:member
+  package: excel!
+  fullName: items
+  summary: 获取此集合中已加载的子项。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly items: Excel.RowColumnPivotHierarchy[];'
+    return:
+      type: <xref uid="excel!Excel.RowColumnPivotHierarchy:class" />[]
+methods:
+- name: add(pivotHierarchy)
+  uid: excel!Excel.RowColumnPivotHierarchyCollection#add:member(1)
+  package: excel!
+  fullName: add(pivotHierarchy)
+  summary: >-
+    将 PivotHierarchy 添加到当前轴。 如果行、列或筛选轴上的其他位置存在层次结构，则会将该层次结构从相应的位置移除。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: getCount()
-    fullName: getCount()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'getCount(): OfficeExtension.ClientResult<number>;'
-      return:
-        type:
-          - 'excel!Excel.RowColumnPivotHierarchyCollection#getCount~0:complex'
-        description: ''
-  - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#getItem:member(1)'
-    summary: |-
-      按名称或 ID 获取 RowColumnPivotHierarchy。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: getItem(name)
-    fullName: getItem(name)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'getItem(name: string): Excel.RowColumnPivotHierarchy;'
-      return:
-        type:
-          - 'excel!Excel.RowColumnPivotHierarchy:class'
-        description: ''
-      parameters:
-        - id: name
-          description: 要检索的 RowColumnPivotHierarchy 的名称。
-          type:
-            - string
-  - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#getItemOrNullObject:member(1)'
-    summary: |-
-      按名称获取 RowColumnPivotHierarchy。 如果 RowColumnPivotHierarchy 不存在，则返回 Null 对象。
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'add(pivotHierarchy: Excel.PivotHierarchy): Excel.RowColumnPivotHierarchy;'
+    parameters:
+    - id: pivotHierarchy
+      description: ''
+      type: <xref uid="excel!Excel.PivotHierarchy:class" />
+    return:
+      type: <xref uid="excel!Excel.RowColumnPivotHierarchy:class" />
+      description: ''
+- name: getCount()
+  uid: excel!Excel.RowColumnPivotHierarchyCollection#getCount:member(1)
+  package: excel!
+  fullName: getCount()
+  summary: >-
+    获取集合中的透视层级结构的数量。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: getItemOrNullObject(name)
-    fullName: getItemOrNullObject(name)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'getItemOrNullObject(name: string): Excel.RowColumnPivotHierarchy;'
-      return:
-        type:
-          - 'excel!Excel.RowColumnPivotHierarchy:class'
-        description: ''
-      parameters:
-        - id: name
-          description: 要检索的 RowColumnPivotHierarchy 的名称。
-          type:
-            - string
-  - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#items:member'
-    summary: 获取此集合中已加载的子项。
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly items: Excel.RowColumnPivotHierarchy[];'
-      return:
-        type:
-          - 'excel!Excel.RowColumnPivotHierarchyCollection#items~0:complex'
-  - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(options)
-    fullName: load(options)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(options?: Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions): Excel.RowColumnPivotHierarchyCollection;'
-      return:
-        type:
-          - 'excel!Excel.RowColumnPivotHierarchyCollection:class'
-        description: ''
-      parameters:
-        - id: options
-          description: 提供要加载的对象的属性的选项。
-          type:
-            - 'excel!Excel.RowColumnPivotHierarchyCollection#load~0:complex'
-  - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNames)
-    fullName: load(propertyNames)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNames?: string | string[]): Excel.RowColumnPivotHierarchyCollection;'
-      return:
-        type:
-          - 'excel!Excel.RowColumnPivotHierarchyCollection:class'
-        description: ''
-      parameters:
-        - id: propertyNames
-          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
-          type:
-            - 'string | string[]'
-  - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNamesAndPaths)
-    fullName: load(propertyNamesAndPaths)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNamesAndPaths?: OfficeExtension.LoadOption): Excel.RowColumnPivotHierarchyCollection;'
-      return:
-        type:
-          - 'excel!Excel.RowColumnPivotHierarchyCollection:class'
-        description: ''
-      parameters:
-        - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
-          type:
-            - 'office!OfficeExtension.LoadOption:interface'
-  - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#remove:member(1)'
-    summary: |-
-      从当前轴删除 PivotHierarchy。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: remove(rowColumnPivotHierarchy)
-    fullName: remove(rowColumnPivotHierarchy)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'remove(rowColumnPivotHierarchy: Excel.RowColumnPivotHierarchy): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: rowColumnPivotHierarchy
-          description: ''
-          type:
-            - 'excel!Excel.RowColumnPivotHierarchy:class'
-  - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始 `Excel.RowColumnPivotHierarchyCollection` 对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.RowColumnPivotHierarchyCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
-    name: toJSON()
-    fullName: toJSON()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'toJSON(): Excel.Interfaces.RowColumnPivotHierarchyCollectionData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.RowColumnPivotHierarchyCollectionData:interface'
-        description: ''
-references:
-  - uid: 'office!OfficeExtension.ClientObject:class'
-    name: OfficeExtension.ClientObject
-  - uid: 'excel!Excel.RowColumnPivotHierarchy:class'
-    name: Excel.RowColumnPivotHierarchy
-  - uid: 'excel!Excel.PivotHierarchy:class'
-    name: Excel.PivotHierarchy
-  - uid: 'excel!Excel.RequestContext:class'
-    name: RequestContext
-  - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#getCount~0:complex'
-    name: OfficeExtension.ClientResult<number>
-    fullName: OfficeExtension.ClientResult<number>
-    spec.typeScript:
-      - uid: 'office!OfficeExtension.ClientResult:class'
-        name: OfficeExtension.ClientResult
-        fullName: OfficeExtension.ClientResult
-      - name: <number>
-        fullName: <number>
-  - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#items~0:complex'
-    name: 'Excel.RowColumnPivotHierarchy[]'
-    fullName: 'Excel.RowColumnPivotHierarchy[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.RowColumnPivotHierarchy:class'
-        name: Excel.RowColumnPivotHierarchy
-        fullName: Excel.RowColumnPivotHierarchy
-      - name: '[]'
-        fullName: '[]'
-  - uid: 'excel!Excel.RowColumnPivotHierarchyCollection:class'
-    name: Excel.RowColumnPivotHierarchyCollection
-  - uid: 'excel!Excel.RowColumnPivotHierarchyCollection#load~0:complex'
-    name: Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions
-    fullName: Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions:interface'
-        name: Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions
-        fullName: Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions
-      - name: ' & '
-        fullName: ' & '
-      - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
-        name: Excel.Interfaces.CollectionLoadOptions
-        fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'office!OfficeExtension.LoadOption:interface'
-    name: OfficeExtension.LoadOption
-  - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyCollectionData:interface'
-    name: Excel.Interfaces.RowColumnPivotHierarchyCollectionData
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'getCount(): OfficeExtension.ClientResult<number>;'
+    return:
+      type: <xref uid="office!OfficeExtension.ClientResult:class" />&lt;number&gt;
+      description: ''
+- name: getItem(name)
+  uid: excel!Excel.RowColumnPivotHierarchyCollection#getItem:member(1)
+  package: excel!
+  fullName: getItem(name)
+  summary: >-
+    按名称或 ID 获取 RowColumnPivotHierarchy。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'getItem(name: string): Excel.RowColumnPivotHierarchy;'
+    parameters:
+    - id: name
+      description: 要检索的 RowColumnPivotHierarchy 的名称。
+      type: string
+    return:
+      type: <xref uid="excel!Excel.RowColumnPivotHierarchy:class" />
+      description: ''
+- name: getItemOrNullObject(name)
+  uid: excel!Excel.RowColumnPivotHierarchyCollection#getItemOrNullObject:member(1)
+  package: excel!
+  fullName: getItemOrNullObject(name)
+  summary: >-
+    按名称获取 RowColumnPivotHierarchy。 如果 RowColumnPivotHierarchy 不存在，则返回 Null 对象。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'getItemOrNullObject(name: string): Excel.RowColumnPivotHierarchy;'
+    parameters:
+    - id: name
+      description: 要检索的 RowColumnPivotHierarchy 的名称。
+      type: string
+    return:
+      type: <xref uid="excel!Excel.RowColumnPivotHierarchy:class" />
+      description: ''
+- name: load(options)
+  uid: excel!Excel.RowColumnPivotHierarchyCollection#load:member(1)
+  package: excel!
+  fullName: load(options)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(options?: Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions): Excel.RowColumnPivotHierarchyCollection;'
+    parameters:
+    - id: options
+      description: 提供要加载的对象的属性的选项。
+      type: <xref uid="excel!Excel.Interfaces.RowColumnPivotHierarchyCollectionLoadOptions:interface" /> & <xref uid="excel!Excel.Interfaces.CollectionLoadOptions:interface" />
+    return:
+      type: <xref uid="excel!Excel.RowColumnPivotHierarchyCollection:class" />
+      description: ''
+- name: load(propertyNames)
+  uid: excel!Excel.RowColumnPivotHierarchyCollection#load:member(2)
+  package: excel!
+  fullName: load(propertyNames)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNames?: string | string[]): Excel.RowColumnPivotHierarchyCollection;'
+    parameters:
+    - id: propertyNames
+      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      type: string | string[]
+    return:
+      type: <xref uid="excel!Excel.RowColumnPivotHierarchyCollection:class" />
+      description: ''
+- name: load(propertyNamesAndPaths)
+  uid: excel!Excel.RowColumnPivotHierarchyCollection#load:member(3)
+  package: excel!
+  fullName: load(propertyNamesAndPaths)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNamesAndPaths?: OfficeExtension.LoadOption): Excel.RowColumnPivotHierarchyCollection;'
+    parameters:
+    - id: propertyNamesAndPaths
+      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+      type: <xref uid="office!OfficeExtension.LoadOption:interface" />
+    return:
+      type: <xref uid="excel!Excel.RowColumnPivotHierarchyCollection:class" />
+      description: ''
+- name: remove(rowColumnPivotHierarchy)
+  uid: excel!Excel.RowColumnPivotHierarchyCollection#remove:member(1)
+  package: excel!
+  fullName: remove(rowColumnPivotHierarchy)
+  summary: >-
+    从当前轴删除 PivotHierarchy。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'remove(rowColumnPivotHierarchy: Excel.RowColumnPivotHierarchy): void;'
+    parameters:
+    - id: rowColumnPivotHierarchy
+      description: ''
+      type: <xref uid="excel!Excel.RowColumnPivotHierarchy:class" />
+    return:
+      type: void
+      description: ''
+- name: toJSON()
+  uid: excel!Excel.RowColumnPivotHierarchyCollection#toJSON:member(1)
+  package: excel!
+  fullName: toJSON()
+  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) 而原始 `Excel.RowColumnPivotHierarchyCollection` 对象是 API 对象，则该 `toJSON` 方法返回一个纯 JavaScript 对象 (类型为 `Excel.Interfaces.RowColumnPivotHierarchyCollectionData`<!-- -->包含集合项中任何已加载属性的浅表的 "items" 数组 ) 。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'toJSON(): Excel.Interfaces.RowColumnPivotHierarchyCollectionData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.RowColumnPivotHierarchyCollectionData:interface" />
+      description: ''
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
+metadata:
+  ms.openlocfilehash: 6cb4bba35c6b97f479dfb225629e2bbd54c8c8c3
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49302682"
