--- a/docs/docs-ref-autogen/word/word/word.interfaces.customxmlpartcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.customxmlpartcollectionupdatedata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.CustomXmlPartCollectionUpdateData:interface'
-    summary: '一个用于更新 CustomXmlPartCollection 对象上的数据的接口，可用于`customXmlPartCollection.set({ ... })`<!-- -->.'
-    name: Word.Interfaces.CustomXmlPartCollectionUpdateData
-    fullName: Word.Interfaces.CustomXmlPartCollectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: word!
-    children:
-      - 'word!Word.Interfaces.CustomXmlPartCollectionUpdateData#items:member'
-  - uid: 'word!Word.Interfaces.CustomXmlPartCollectionUpdateData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Word.Interfaces.CustomXmlPartData[];'
-      return:
-        type:
-          - 'word!Word.Interfaces.CustomXmlPartCollectionUpdateData#items~0:complex'
-references:
-  - uid: 'word!Word.Interfaces.CustomXmlPartCollectionUpdateData#items~0:complex'
-    name: 'Word.Interfaces.CustomXmlPartData[]'
-    fullName: 'Word.Interfaces.CustomXmlPartData[]'
-    spec.typeScript:
-      - uid: 'word!Word.Interfaces.CustomXmlPartData:interface'
-        name: Word.Interfaces.CustomXmlPartData
-        fullName: Word.Interfaces.CustomXmlPartData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Word.Interfaces.CustomXmlPartCollectionUpdateData
+uid: word!Word.Interfaces.CustomXmlPartCollectionUpdateData:interface
+package: word!
+fullName: Word.Interfaces.CustomXmlPartCollectionUpdateData
+summary: 一个用于更新 CustomXmlPartCollection 对象上的数据的接口，可用于 `customXmlPartCollection.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: word!Word.Interfaces.CustomXmlPartCollectionUpdateData#items:member
+  package: word!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Word.Interfaces.CustomXmlPartData[];'
+    return:
+      type: <xref uid="word!Word.Interfaces.CustomXmlPartData:interface" />[]
+metadata:
+  ms.openlocfilehash: 918eca3f81a0ce2276cb228fdb55851e7d4e339f
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49300659"
