--- a/docs/docs-ref-autogen/word/word/word.interfaces.settingcollectiondata.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.settingcollectiondata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.SettingCollectionData:interface'
-    summary: 描述通过调用返回的数据的接口`settingCollection.toJSON()`<!-- -->.
-    name: Word.Interfaces.SettingCollectionData
-    fullName: Word.Interfaces.SettingCollectionData
-    langs:
-      - typeScript
-    type: interface
-    package: word!
-    children:
-      - 'word!Word.Interfaces.SettingCollectionData#items:member'
-  - uid: 'word!Word.Interfaces.SettingCollectionData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Word.Interfaces.SettingData[];'
-      return:
-        type:
-          - 'word!Word.Interfaces.SettingCollectionData#items~0:complex'
-references:
-  - uid: 'word!Word.Interfaces.SettingCollectionData#items~0:complex'
-    name: 'Word.Interfaces.SettingData[]'
-    fullName: 'Word.Interfaces.SettingData[]'
-    spec.typeScript:
-      - uid: 'word!Word.Interfaces.SettingData:interface'
-        name: Word.Interfaces.SettingData
-        fullName: Word.Interfaces.SettingData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Word.Interfaces.SettingCollectionData
+uid: word!Word.Interfaces.SettingCollectionData:interface
+package: word!
+fullName: Word.Interfaces.SettingCollectionData
+summary: 描述通过调用返回的数据的接口 `settingCollection.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: word!Word.Interfaces.SettingCollectionData#items:member
+  package: word!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Word.Interfaces.SettingData[];'
+    return:
+      type: <xref uid="word!Word.Interfaces.SettingData:interface" />[]
+metadata:
+  ms.openlocfilehash: 0125eacd6fcb475be146970a6b936431a01992fe
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49300646"
