--- a/docs/docs-ref-autogen/word/word/word.interfaces.settingloadoptions.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.settingloadoptions.yml
@@ -1,63 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.SettingLoadOptions:interface'
-    summary: |-
-      代表加载项的设置。
+### YamlMime:TSType
+name: Word.Interfaces.SettingLoadOptions
+uid: word!Word.Interfaces.SettingLoadOptions:interface
+package: word!
+fullName: Word.Interfaces.SettingLoadOptions
+summary: >-
+  代表加载项的设置。
 
-      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    isPreview: true
-    name: Word.Interfaces.SettingLoadOptions
-    fullName: Word.Interfaces.SettingLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: word!
-    children:
-      - 'word!Word.Interfaces.SettingLoadOptions#$all:member'
-      - 'word!Word.Interfaces.SettingLoadOptions#key:member'
-      - 'word!Word.Interfaces.SettingLoadOptions#value:member'
-  - uid: 'word!Word.Interfaces.SettingLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    isPreview: true
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.SettingLoadOptions#key:member'
-    summary: |-
-      获取设置的键。 只读。
 
-      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    isPreview: true
-    name: key
-    fullName: key
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'key?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.SettingLoadOptions#value:member'
-    summary: |-
-      获取或设置设置的值。
+  \[[API 集： WORDAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+remarks: ''
+isPreview: true
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: word!Word.Interfaces.SettingLoadOptions#$all:member
+  package: word!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: key
+  uid: word!Word.Interfaces.SettingLoadOptions#key:member
+  package: word!
+  fullName: key
+  summary: >-
+    获取设置的键。 只读。
 
-      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    isPreview: true
-    name: value
-    fullName: value
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'value?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集： WORDAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'key?: boolean;'
+    return:
+      type: boolean
+- name: value
+  uid: word!Word.Interfaces.SettingLoadOptions#value:member
+  package: word!
+  fullName: value
+  summary: >-
+    获取或设置设置的值。
+
+
+    \[[API 集： WORDAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'value?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 9df6fad931e0132673087deefc8f67924a5a5805
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49300624"
