--- a/docs/docs-ref-autogen/word/word/word.interfaces.tableborderloadoptions.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.tableborderloadoptions.yml
@@ -1,75 +1,82 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.TableBorderLoadOptions:interface'
-    summary: |-
-      指定边框样式。
+### YamlMime:TSType
+name: Word.Interfaces.TableBorderLoadOptions
+uid: word!Word.Interfaces.TableBorderLoadOptions:interface
+package: word!
+fullName: Word.Interfaces.TableBorderLoadOptions
+summary: >-
+  指定边框样式。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: Word.Interfaces.TableBorderLoadOptions
-    fullName: Word.Interfaces.TableBorderLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: word!
-    children:
-      - 'word!Word.Interfaces.TableBorderLoadOptions#$all:member'
-      - 'word!Word.Interfaces.TableBorderLoadOptions#color:member'
-      - 'word!Word.Interfaces.TableBorderLoadOptions#type:member'
-      - 'word!Word.Interfaces.TableBorderLoadOptions#width:member'
-  - uid: 'word!Word.Interfaces.TableBorderLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.TableBorderLoadOptions#color:member'
-    summary: |-
-      获取或设置表格边框颜色。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: color
-    fullName: color
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'color?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.TableBorderLoadOptions#type:member'
-    summary: |-
-      获取或设置表边框的类型。
+  \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: word!Word.Interfaces.TableBorderLoadOptions#$all:member
+  package: word!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: color
+  uid: word!Word.Interfaces.TableBorderLoadOptions#color:member
+  package: word!
+  fullName: color
+  summary: >-
+    获取或设置表格边框颜色。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.TableBorderLoadOptions#width:member'
-    summary: |-
-      获取或设置表边框的宽度（以磅为单位）。 不适用于宽度固定的表边框类型。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: width
-    fullName: width
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'width?: boolean;'
-      return:
-        type:
-          - boolean
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'color?: boolean;'
+    return:
+      type: boolean
+- name: type
+  uid: word!Word.Interfaces.TableBorderLoadOptions#type:member
+  package: word!
+  fullName: type
+  summary: >-
+    获取或设置表边框的类型。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'type?: boolean;'
+    return:
+      type: boolean
+- name: width
+  uid: word!Word.Interfaces.TableBorderLoadOptions#width:member
+  package: word!
+  fullName: width
+  summary: >-
+    获取或设置表边框的宽度（以磅为单位）。 不适用于宽度固定的表边框类型。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'width?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: dfaa7a931c5000694ac4349921c89fbbf3121e3e
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49300617"
