--- a/docs/docs-ref-autogen/word/word/word.interfaces.tablecellcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.tablecellcollectionupdatedata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.TableCellCollectionUpdateData:interface'
-    summary: '一个用于更新 TableCellCollection 对象上的数据的接口，可用于`tableCellCollection.set({ ... })`<!-- -->.'
-    name: Word.Interfaces.TableCellCollectionUpdateData
-    fullName: Word.Interfaces.TableCellCollectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: word!
-    children:
-      - 'word!Word.Interfaces.TableCellCollectionUpdateData#items:member'
-  - uid: 'word!Word.Interfaces.TableCellCollectionUpdateData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Word.Interfaces.TableCellData[];'
-      return:
-        type:
-          - 'word!Word.Interfaces.TableCellCollectionUpdateData#items~0:complex'
-references:
-  - uid: 'word!Word.Interfaces.TableCellCollectionUpdateData#items~0:complex'
-    name: 'Word.Interfaces.TableCellData[]'
-    fullName: 'Word.Interfaces.TableCellData[]'
-    spec.typeScript:
-      - uid: 'word!Word.Interfaces.TableCellData:interface'
-        name: Word.Interfaces.TableCellData
-        fullName: Word.Interfaces.TableCellData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Word.Interfaces.TableCellCollectionUpdateData
+uid: word!Word.Interfaces.TableCellCollectionUpdateData:interface
+package: word!
+fullName: Word.Interfaces.TableCellCollectionUpdateData
+summary: 一个用于更新 TableCellCollection 对象上的数据的接口，可用于 `tableCellCollection.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: word!Word.Interfaces.TableCellCollectionUpdateData#items:member
+  package: word!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Word.Interfaces.TableCellData[];'
+    return:
+      type: <xref uid="word!Word.Interfaces.TableCellData:interface" />[]
+metadata:
+  ms.openlocfilehash: cd0be371c3355b49dd5e2d35af8c8584508d2f44
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49300477"
