--- a/docs/docs-ref-autogen/word_1_3/word/word.listitem.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.listitem.yml
@@ -1,315 +1,286 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.ListItem:class'
-    summary: |-
-      代表段落列表项格式。
+### YamlMime:TSType
+name: Word.ListItem
+uid: word!Word.ListItem:class
+package: word!
+fullName: Word.ListItem
+summary: >-
+  代表段落列表项格式。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: Word.ListItem
-    fullName: Word.ListItem
-    langs:
-      - typeScript
-    type: class
-    extends:
-      - 'office!OfficeExtension.ClientObject:class'
-    package: word!
-    children:
-      - 'word!Word.ListItem#context:member'
-      - 'word!Word.ListItem#getAncestor:member(1)'
-      - 'word!Word.ListItem#getAncestorOrNullObject:member(1)'
-      - 'word!Word.ListItem#getDescendants:member(1)'
-      - 'word!Word.ListItem#level:member'
-      - 'word!Word.ListItem#listString:member'
-      - 'word!Word.ListItem#load:member(1)'
-      - 'word!Word.ListItem#load:member(2)'
-      - 'word!Word.ListItem#load:member(3)'
-      - 'word!Word.ListItem#set:member(1)'
-      - 'word!Word.ListItem#set:member(2)'
-      - 'word!Word.ListItem#siblingIndex:member'
-      - 'word!Word.ListItem#toJSON:member(1)'
-      - 'word!Word.ListItem#track:member(1)'
-      - 'word!Word.ListItem#untrack:member(1)'
-  - uid: 'word!Word.ListItem#context:member'
-    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    name: context
-    fullName: context
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'context: RequestContext;'
-      return:
-        type:
-          - 'word!Word.RequestContext:class'
-  - uid: 'word!Word.ListItem#getAncestor:member(1)'
-    summary: |-
-      获取列表项目的父级或最近的上级元素（如果父级不存在的话）。 如果列表项没有祖先，则会引发错误。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: getAncestor(parentOnly)
-    fullName: getAncestor(parentOnly)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'getAncestor(parentOnly?: boolean): Word.Paragraph;'
-      return:
-        type:
-          - 'word!Word.Paragraph:class'
-        description: ''
-      parameters:
-        - id: parentOnly
-          description: 可选。 指定将仅返回列表项的父级。 默认值为 false，指定获取最低的上级。
-          type:
-            - boolean
-  - uid: 'word!Word.ListItem#getAncestorOrNullObject:member(1)'
-    summary: |-
-      获取列表项目的父级或最近的上级元素（如果父级不存在的话）。 如果列表项没有祖先，则返回 null 对象。
+  \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+properties:
+- name: context
+  uid: word!Word.ListItem#context:member
+  package: word!
+  fullName: context
+  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'context: RequestContext;'
+    return:
+      type: <xref uid="word!Word.RequestContext:class" />
+- name: level
+  uid: word!Word.ListItem#level:member
+  package: word!
+  fullName: level
+  summary: >-
+    获取或设置 list 中项的级别。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: getAncestorOrNullObject(parentOnly)
-    fullName: getAncestorOrNullObject(parentOnly)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'getAncestorOrNullObject(parentOnly?: boolean): Word.Paragraph;'
-      return:
-        type:
-          - 'word!Word.Paragraph:class'
-        description: ''
-      parameters:
-        - id: parentOnly
-          description: 可选。 指定将仅返回列表项的父级。 默认值为 false，指定获取最低的上级。
-          type:
-            - boolean
-  - uid: 'word!Word.ListItem#getDescendants:member(1)'
-    summary: |-
-      获取相应列表项目的所有后代列表项目。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: getDescendants(directChildrenOnly)
-    fullName: getDescendants(directChildrenOnly)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'getDescendants(directChildrenOnly?: boolean): Word.ParagraphCollection;'
-      return:
-        type:
-          - 'word!Word.ParagraphCollection:class'
-        description: ''
-      parameters:
-        - id: directChildrenOnly
-          description: 可选。 指定将仅返回列表项的直接子级。 默认值为 false，指示获取所有子体项。
-          type:
-            - boolean
-  - uid: 'word!Word.ListItem#level:member'
-    summary: |-
-      获取或设置 list 中项的级别。
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'level: number;'
+    return:
+      type: number
+- name: listString
+  uid: word!Word.ListItem#listString:member
+  package: word!
+  fullName: listString
+  summary: >-
+    以字符串形式获取列表项的项目符号、编号或图片。 只读。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: level
-    fullName: level
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'level: number;'
-      return:
-        type:
-          - number
-  - uid: 'word!Word.ListItem#listString:member'
-    summary: |-
-      以字符串形式获取列表项的项目符号、编号或图片。 只读。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: listString
-    fullName: listString
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly listString: string;'
-      return:
-        type:
-          - string
-  - uid: 'word!Word.ListItem#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(options)
-    fullName: load(options)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(options?: Word.Interfaces.ListItemLoadOptions): Word.ListItem;'
-      return:
-        type:
-          - 'word!Word.ListItem:class'
-        description: ''
-      parameters:
-        - id: options
-          description: 提供要加载的对象的属性的选项。
-          type:
-            - 'word!Word.Interfaces.ListItemLoadOptions:interface'
-  - uid: 'word!Word.ListItem#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNames)
-    fullName: load(propertyNames)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNames?: string | string[]): Word.ListItem;'
-      return:
-        type:
-          - 'word!Word.ListItem:class'
-        description: ''
-      parameters:
-        - id: propertyNames
-          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
-          type:
-            - 'string | string[]'
-  - uid: 'word!Word.ListItem#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNamesAndPaths)
-    fullName: load(propertyNamesAndPaths)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: |-
-        load(propertyNamesAndPaths?: {
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly listString: string;'
+    return:
+      type: string
+- name: siblingIndex
+  uid: word!Word.ListItem#siblingIndex:member
+  package: word!
+  fullName: siblingIndex
+  summary: >-
+    获取 listItem 相对于同级元素的序号。 只读。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly siblingIndex: number;'
+    return:
+      type: number
+methods:
+- name: getAncestor(parentOnly)
+  uid: word!Word.ListItem#getAncestor:member(1)
+  package: word!
+  fullName: getAncestor(parentOnly)
+  summary: >-
+    获取列表项目的父级或最近的上级元素（如果父级不存在的话）。 如果列表项没有祖先，则会引发错误。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'getAncestor(parentOnly?: boolean): Word.Paragraph;'
+    parameters:
+    - id: parentOnly
+      description: 可选。 指定将仅返回列表项的父级。 默认值为 false，指定获取最低的上级。
+      type: boolean
+    return:
+      type: <xref uid="word!Word.Paragraph:class" />
+      description: ''
+- name: getAncestorOrNullObject(parentOnly)
+  uid: word!Word.ListItem#getAncestorOrNullObject:member(1)
+  package: word!
+  fullName: getAncestorOrNullObject(parentOnly)
+  summary: >-
+    获取列表项目的父级或最近的上级元素（如果父级不存在的话）。 如果列表项没有祖先，则返回 null 对象。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'getAncestorOrNullObject(parentOnly?: boolean): Word.Paragraph;'
+    parameters:
+    - id: parentOnly
+      description: 可选。 指定将仅返回列表项的父级。 默认值为 false，指定获取最低的上级。
+      type: boolean
+    return:
+      type: <xref uid="word!Word.Paragraph:class" />
+      description: ''
+- name: getDescendants(directChildrenOnly)
+  uid: word!Word.ListItem#getDescendants:member(1)
+  package: word!
+  fullName: getDescendants(directChildrenOnly)
+  summary: >-
+    获取相应列表项目的所有后代列表项目。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'getDescendants(directChildrenOnly?: boolean): Word.ParagraphCollection;'
+    parameters:
+    - id: directChildrenOnly
+      description: 可选。 指定将仅返回列表项的直接子级。 默认值为 false，指示获取所有子体项。
+      type: boolean
+    return:
+      type: <xref uid="word!Word.ParagraphCollection:class" />
+      description: ''
+- name: load(options)
+  uid: word!Word.ListItem#load:member(1)
+  package: word!
+  fullName: load(options)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(options?: Word.Interfaces.ListItemLoadOptions): Word.ListItem;'
+    parameters:
+    - id: options
+      description: 提供要加载的对象的属性的选项。
+      type: <xref uid="word!Word.Interfaces.ListItemLoadOptions:interface" />
+    return:
+      type: <xref uid="word!Word.ListItem:class" />
+      description: ''
+- name: load(propertyNames)
+  uid: word!Word.ListItem#load:member(2)
+  package: word!
+  fullName: load(propertyNames)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNames?: string | string[]): Word.ListItem;'
+    parameters:
+    - id: propertyNames
+      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      type: string | string[]
+    return:
+      type: <xref uid="word!Word.ListItem:class" />
+      description: ''
+- name: load(propertyNamesAndPaths)
+  uid: word!Word.ListItem#load:member(3)
+  package: word!
+  fullName: load(propertyNamesAndPaths)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: >-
+      load(propertyNamesAndPaths?: {
+                  select?: string;
+                  expand?: string;
+              }): Word.ListItem;
+    parameters:
+    - id: propertyNamesAndPaths
+      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+      type: >-
+        {
                     select?: string;
                     expand?: string;
-                }): Word.ListItem;
-      return:
-        type:
-          - 'word!Word.ListItem:class'
-        description: ''
-      parameters:
-        - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
-          type:
-            - |-
-              {
-                          select?: string;
-                          expand?: string;
-                      }
-  - uid: 'word!Word.ListItem#set:member(1)'
-    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
-    remarks: |-
-      此方法具有以下附加签名：
+                }
+    return:
+      type: <xref uid="word!Word.ListItem:class" />
+      description: ''
+- name: set(properties, options)
+  uid: word!Word.ListItem#set:member(1)
+  package: word!
+  fullName: set(properties, options)
+  summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
+  remarks: >-
+    此方法具有以下附加签名：
 
-      `set(properties: Word.ListItem): void`
-    name: 'set(properties, options)'
-    fullName: 'set(properties, options)'
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'set(properties: Interfaces.ListItemUpdateData, options?: OfficeExtension.UpdateOptions): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: properties
-          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
-          type:
-            - 'word!Word.Interfaces.ListItemUpdateData:interface'
-        - id: options
-          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
-          type:
-            - 'office!OfficeExtension.UpdateOptions:interface'
-  - uid: 'word!Word.ListItem#set:member(2)'
-    summary: 基于现有加载的对象同时设置该对象的多个属性。
-    name: set(properties)
-    fullName: set(properties)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'set(properties: Word.ListItem): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: properties
-          description: ''
-          type:
-            - 'word!Word.ListItem:class'
-  - uid: 'word!Word.ListItem#siblingIndex:member'
-    summary: |-
-      获取 listItem 相对于同级元素的序号。 只读。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: siblingIndex
-    fullName: siblingIndex
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly siblingIndex: number;'
-      return:
-        type:
-          - number
-  - uid: 'word!Word.ListItem#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。而原始的单词表对象是 API 对象，则该 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`Word.Interfaces.ListItemData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
-    name: toJSON()
-    fullName: toJSON()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'toJSON(): Word.Interfaces.ListItemData;'
-      return:
-        type:
-          - 'word!Word.Interfaces.ListItemData:interface'
-        description: ''
-  - uid: 'word!Word.ListItem#track:member(1)'
-    summary: 根据文档中的相应更改来跟踪对象，以便进行自动调整。 此调用是的简写`context.trackedObjects.add(thisObject)`<!-- -->. 如果要在多个调用中使用此对象 `.sync` ，并在 "运行" 批处理的顺序执行之外使用此对象，并在设置属性或对对象调用方法时获取 "InvalidObjectPath" 错误，则需要在首次创建对象时将该对象添加到跟踪的对象集合中。
-    name: track()
-    fullName: track()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'track(): Word.ListItem;'
-      return:
-        type:
-          - 'word!Word.ListItem:class'
-        description: ''
-  - uid: 'word!Word.ListItem#untrack:member(1)'
-    summary: 释放与此对象关联的内存（如果先前已跟踪过）。 此调用是的简写`context.trackedObjects.remove(thisObject)`<!-- -->. 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在 `context.sync()` 内存释放生效之前，您需要调用该过程。
-    name: untrack()
-    fullName: untrack()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'untrack(): Word.ListItem;'
-      return:
-        type:
-          - 'word!Word.ListItem:class'
-        description: ''
-references:
-  - uid: 'office!OfficeExtension.ClientObject:class'
-    name: OfficeExtension.ClientObject
-  - uid: 'word!Word.RequestContext:class'
-    name: RequestContext
-  - uid: 'word!Word.Paragraph:class'
-    name: Word.Paragraph
-  - uid: 'word!Word.ParagraphCollection:class'
-    name: Word.ParagraphCollection
-  - uid: 'word!Word.ListItem:class'
-    name: Word.ListItem
-  - uid: 'word!Word.Interfaces.ListItemLoadOptions:interface'
-    name: Word.Interfaces.ListItemLoadOptions
-  - uid: 'word!Word.Interfaces.ListItemUpdateData:interface'
-    name: Interfaces.ListItemUpdateData
-  - uid: 'office!OfficeExtension.UpdateOptions:interface'
-    name: OfficeExtension.UpdateOptions
-  - uid: 'word!Word.Interfaces.ListItemData:interface'
-    name: Word.Interfaces.ListItemData
+    `set(properties: Word.ListItem): void`
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'set(properties: Interfaces.ListItemUpdateData, options?: OfficeExtension.UpdateOptions): void;'
+    parameters:
+    - id: properties
+      description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
+      type: <xref uid="word!Word.Interfaces.ListItemUpdateData:interface" />
+    - id: options
+      description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
+      type: <xref uid="office!OfficeExtension.UpdateOptions:interface" />
+    return:
+      type: void
+      description: ''
+- name: set(properties)
+  uid: word!Word.ListItem#set:member(2)
+  package: word!
+  fullName: set(properties)
+  summary: 基于现有加载的对象同时设置该对象的多个属性。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'set(properties: Word.ListItem): void;'
+    parameters:
+    - id: properties
+      description: ''
+      type: <xref uid="word!Word.ListItem:class" />
+    return:
+      type: void
+      description: ''
+- name: toJSON()
+  uid: word!Word.ListItem#toJSON:member(1)
+  package: word!
+  fullName: toJSON()
+  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) ，而原始的单词表对象是 API 对象，则该 `toJSON` 方法返回一个简单的 JavaScript 对象 (类型为 `Word.Interfaces.ListItemData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'toJSON(): Word.Interfaces.ListItemData;'
+    return:
+      type: <xref uid="word!Word.Interfaces.ListItemData:interface" />
+      description: ''
+- name: track()
+  uid: word!Word.ListItem#track:member(1)
+  package: word!
+  fullName: track()
+  summary: 根据文档中的相应更改来跟踪对象，以便进行自动调整。 此调用是的简写 `context.trackedObjects.add(thisObject)`<!-- -->. 如果要在多个调用中使用此对象 `.sync` ，并在 "运行" 批处理的顺序执行之外使用此对象，并在设置属性或对对象调用方法时获取 "InvalidObjectPath" 错误，则需要在首次创建对象时将该对象添加到跟踪的对象集合中。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'track(): Word.ListItem;'
+    return:
+      type: <xref uid="word!Word.ListItem:class" />
+      description: ''
+- name: untrack()
+  uid: word!Word.ListItem#untrack:member(1)
+  package: word!
+  fullName: untrack()
+  summary: 释放与此对象关联的内存（如果先前已跟踪过）。 此调用是的简写 `context.trackedObjects.remove(thisObject)`<!-- -->. 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在 `context.sync()` 内存释放生效之前，您需要调用该过程。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'untrack(): Word.ListItem;'
+    return:
+      type: <xref uid="word!Word.ListItem:class" />
+      description: ''
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
+metadata:
+  ms.openlocfilehash: 8f61279aa6ef0fb233dbe154cb44c15f46dbc359
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49300491"
